--- a/style/login.css
+++ b/style/login.css
@@ -1,31 +1,34 @@
+body {
+    background-color: #FCC800;
+}
+
 .container {
         display: flex;
         justify-content: center;
         align-items: center;
-        min-height: 100vh;
-        background-color: #FFD700;
-        padding: 20px;
+        place-content: center;
+        flex-direction:column;
+        margin-top: 15vh;
     }
 
     .login-form {
         background: white;
-        padding: 20px;
         width: 100%;
-        max-width: 400px;
-        border: 2px solid white;
+        height: 400px;
+        max-width: 600px;
         box-shadow: 0 0 0 10px white;
-        margin: 10px;
     }
 
     h1 {
         text-align: center;
-        margin-bottom: 20px;
+        margin-top: 20px;
+        margin-bottom: 0px;
         color: #333;
         font-size: 24px;
     }
 
     .form-group {
-        margin-bottom: 15px;
+        align-items: center;
     }
 
     label {
@@ -35,6 +38,9 @@
     }
 
     input {
+        display: flex;
+        justify-content: center;
+        align-items: center;
         width: 300px;
         padding: 3px;
         border: 1px solid #000;
@@ -51,7 +57,7 @@
     .login-button {
         width: 300px;
         padding: 10px;
-        background-color: #E67E22;
+        background-color: #DD6E35;
         color: white;
         border: none;
         font-size: 16px;
@@ -65,8 +71,18 @@
     }
 
     .register-link a {
-        color: #E67E22;
+        color: #DD6E35;
         text-decoration: none;
+    }
+
+    form {
+        margin-top: 40px;
+    }
+
+    .icon{
+        width: 80px;
+        height: auto;
+        margin-bottom: 30px;
     }
 
     @media (max-width: 480px) {
