--- a/style/login.css
+++ b/style/login.css
@@ -55,6 +55,8 @@ body {
     }
 
     .login-button {
+        display: block;
+        margin: 20px auto 0;
         width: 300px;
         padding: 10px;
         background-color: #DD6E35;
